@@ -9,6 +9,7 @@
     * divs
     * buttons
     * text_fields
+    * hidden_fields
 === 2017-01-09
 * Enhancement
   * Added params class instance variable to hold hash values that can be used in the page
